--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
   hive_generator: ^1.1.3
   hive: ^2.2.3
   get: ^4.6.5
-  audioplayers: ^1.1.1
-  path_provider: ^2.0.11
+  file_picker: ^5.2.2
+  
 
 dev_dependencies:
   flutter_test:
